need to finish motion layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="head_6">Chicén Itzá</string>
     <string name="head_7">Petra</string>
 
+    <string name="desc_1">The Colosseum, also known as the Flavian Amphitheatre, is a large amphitheater located in the center of Rome, Italy. It was built during the Roman Empire, around 70-80 AD, and is considered one of the greatest examples of Roman architecture and engineering.\n\n
+
+The Colosseum is oval in shape, with a total circumference of about 545 meters (1,788 feet) and stands 50 meters (164 feet) tall. It was built to accommodate tens of thousands of spectators, who would watch a variety of events, including gladiator battles, animal hunts, and plays. It was constructed using concrete and stone, and features a complex system of arches, vaults, and tunnels that supported its weight and allowed for the movement of people and animals.\n\n
+
+The Colosseum has a distinctive exterior, with four tiers of arches adorned with Corinthian columns. The interior of the Colosseum is divided into two main levels, the arena floor and the upper level, which were separated by a wall known as the velarium. The arena floor was made of wood and was surrounded by a moat, which could be filled with water for naval battles or animal hunts. The upper level, or the cavea, was divided into sections and was used by spectators to watch the events below.\n\n
+
+Today, the Colosseum is one of the most popular tourist attractions in Rome, and is a UNESCO World Heritage Site. It is a symbol of the power and grandeur of the Roman Empire, and serves as a reminder of the rich history and cultural heritage of Rome and Italy.</string>
 </resources>
