need to fix MainActivity2 images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,21 @@ The Colosseum is oval in shape, with a total circumference of about 545 meters (
 The Colosseum has a distinctive exterior, with four tiers of arches adorned with Corinthian columns. The interior of the Colosseum is divided into two main levels, the arena floor and the upper level, which were separated by a wall known as the velarium. The arena floor was made of wood and was surrounded by a moat, which could be filled with water for naval battles or animal hunts. The upper level, or the cavea, was divided into sections and was used by spectators to watch the events below.\n\n
 
 Today, the Colosseum is one of the most popular tourist attractions in Rome, and is a UNESCO World Heritage Site. It is a symbol of the power and grandeur of the Roman Empire, and serves as a reminder of the rich history and cultural heritage of Rome and Italy.</string>
+
+    <string name="desc_2">The Great Wall of China is a series of fortifications that were built, rebuilt, and maintained over the centuries to protect and defend the Chinese Empire from invasions and raids by nomadic groups. The wall stretches more than 13,000 miles (21,000 kilometers) across northern China, from the Yellow Sea in the east to the Gobi Desert in the west, making it the longest wall in the world.\n\n
+
+The Great Wall was built using a variety of materials, including brick, tamped earth, and stone, and features a series of watchtowers, garrison stations, and beacon towers that were used to communicate and defend against invaders. It was constructed over a period of more than 2,000 years, with the earliest sections dating back to the 7th century BC.\n\n
+
+The Great Wall was designated as a UNESCO World Heritage Site in 1987, and it is one of the most famous landmarks in China and the world. It is also a popular tourist attraction, with many people visiting to walk along its length and see the breathtaking views it offers.\n\n
+
+Despite its impressive size and historical significance, the Great Wall of China is not visible from space, as is often believed. It is, however, visible from the moon with the naked eye, due to its long length and the fact that it was built along the crest of a series of hills and mountains.
+
+
+
+</string>
+    <string name="desc_3">x</string>
+    <string name="desc_4">x</string>
+    <string name="desc_5">x</string>
+    <string name="desc_6">x</string>
+    <string name="desc_7">x</string>
 </resources>
