MainActivity3 to be finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,14 @@ The Great Wall was built using a variety of materials, including brick, tamped e
 The Great Wall was designated as a UNESCO World Heritage Site in 1987, and it is one of the most famous landmarks in China and the world. It is also a popular tourist attraction, with many people visiting to walk along its length and see the breathtaking views it offers.\n\n
 
 Despite its impressive size and historical significance, the Great Wall of China is not visible from space, as is often believed. It is, however, visible from the moon with the naked eye, due to its long length and the fact that it was built along the crest of a series of hills and mountains.
-
-
-
 </string>
-    <string name="desc_3">x</string>
+
+    <string name="desc_3">The Taj Mahal is a mausoleum located in Agra, India. It was built by Mughal Emperor Shah Jahan in memory of his favorite wife, Mumtaz Mahal, who died during childbirth in 1631. The Taj Mahal is considered one of the most beautiful and iconic buildings in the world, and it is a UNESCO World Heritage Site.\n\n
+
+The Taj Mahal is made of white marble and is set in formal gardens on the south bank of the Yamuna River. It is considered a masterpiece of Mughal architecture, which combines elements of Indian, Persian, and Islamic styles. The building is symmetrical and features an intricate inlay of precious and semiprecious stones, including jade, lapis lazuli, amethyst, and crystal.\n\n
+
+The Taj Mahal is a popular tourist destination and attracts millions of visitors each year. It is also a symbol of love and devotion, and it is often referred to as the "jewel of Muslim art in India."</string>
+
     <string name="desc_4">x</string>
     <string name="desc_5">x</string>
     <string name="desc_6">x</string>
