gif to be fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,51 +9,31 @@
     <string name="head_6">Chicén Itzá</string>
     <string name="head_7">Petra</string>
 
+    <string name="about_desc">Welcome to our Android app, where you can learn all about the 7 Wonders of the World\! With this app, you can discover the history, significance, and location of these iconic landmarks.\n\n
+Our app features detailed information and images of each of the 7 Wonders.\n\n
+Whether you\'re a history buff, a travel enthusiast, or just looking for some fun and educational content, this app has something for everyone. So download it now and start your journey to explore the 7 Wonders of the World\!</string>
+
     <string name="desc_1">The Colosseum, also known as the Flavian Amphitheatre, is a large amphitheater located in the center of Rome, Italy. It was built during the Roman Empire, around 70-80 AD, and is considered one of the greatest examples of Roman architecture and engineering.\n\n
-
 The Colosseum is oval in shape, with a total circumference of about 545 meters (1,788 feet) and stands 50 meters (164 feet) tall. It was built to accommodate tens of thousands of spectators, who would watch a variety of events, including gladiator battles, animal hunts, and plays. It was constructed using concrete and stone, and features a complex system of arches, vaults, and tunnels that supported its weight and allowed for the movement of people and animals.\n\n
-
 The Colosseum has a distinctive exterior, with four tiers of arches adorned with Corinthian columns. The interior of the Colosseum is divided into two main levels, the arena floor and the upper level, which were separated by a wall known as the velarium. The arena floor was made of wood and was surrounded by a moat, which could be filled with water for naval battles or animal hunts. The upper level, or the cavea, was divided into sections and was used by spectators to watch the events below.\n\n
-
 Today, the Colosseum is one of the most popular tourist attractions in Rome, and is a UNESCO World Heritage Site. It is a symbol of the power and grandeur of the Roman Empire, and serves as a reminder of the rich history and cultural heritage of Rome and Italy.</string>
-
     <string name="desc_2">The Great Wall of China is a series of fortifications that were built, rebuilt, and maintained over the centuries to protect and defend the Chinese Empire from invasions and raids by nomadic groups. The wall stretches more than 13,000 miles (21,000 kilometers) across northern China, from the Yellow Sea in the east to the Gobi Desert in the west, making it the longest wall in the world.\n\n
-
 The Great Wall was built using a variety of materials, including brick, tamped earth, and stone, and features a series of watchtowers, garrison stations, and beacon towers that were used to communicate and defend against invaders. It was constructed over a period of more than 2,000 years, with the earliest sections dating back to the 7th century BC.\n\n
-
 The Great Wall was designated as a UNESCO World Heritage Site in 1987, and it is one of the most famous landmarks in China and the world. It is also a popular tourist attraction, with many people visiting to walk along its length and see the breathtaking views it offers.\n\n
-
-Despite its impressive size and historical significance, the Great Wall of China is not visible from space, as is often believed. It is, however, visible from the moon with the naked eye, due to its long length and the fact that it was built along the crest of a series of hills and mountains.
-</string>
-
+Despite its impressive size and historical significance, the Great Wall of China is not visible from space, as is often believed. It is, however, visible from the moon with the naked eye, due to its long length and the fact that it was built along the crest of a series of hills and mountains.</string>
     <string name="desc_3">The Taj Mahal is a mausoleum located in Agra, India. It was built by Mughal Emperor Shah Jahan in memory of his favorite wife, Mumtaz Mahal, who died during childbirth in 1631. The Taj Mahal is considered one of the most beautiful and iconic buildings in the world, and it is a UNESCO World Heritage Site.\n\n
-
 The Taj Mahal is made of white marble and is set in formal gardens on the south bank of the Yamuna River. It is considered a masterpiece of Mughal architecture, which combines elements of Indian, Persian, and Islamic styles. The building is symmetrical and features an intricate inlay of precious and semiprecious stones, including jade, lapis lazuli, amethyst, and crystal.\n\n
-
 The Taj Mahal is a popular tourist destination and attracts millions of visitors each year. It is also a symbol of love and devotion, and it is often referred to as the "jewel of Muslim art in India."</string>
-
     <string name="desc_4">Christ the Redeemer is a statue of Jesus Christ located in Rio de Janeiro, Brazil. It is considered one of the most iconic landmarks of the city, and is one of the most recognizable symbols of Brazil. The statue stands at the peak of the Corcovado mountain, overlooking the city and the Guanabara Bay. It stands at a height of 98 feet and is made of reinforced concrete, covered in soapstone tiles.\n\n
-
 The statue was designed by Brazilian engineer Heitor da Silva Costa, and was created by the French sculptor Paul Landowski. It was completed in 1931 and was officially inaugurated on October 12 of that year. Since then, it has become an important cultural and religious symbol for Brazil and a major tourist attraction in Rio de Janeiro.\n\n
-
 Christ the Redeemer is considered a cultural and religious symbol of Brazil, and is a major tourist attraction in Rio de Janeiro. It is visited by millions of people every year, who come to admire its beauty and to pay their respects to Jesus Christ. The statue is a popular spot for tourists to take photos, and it offers panoramic views of the city and the surrounding landscape. It is also a popular location for weddings and other special events.</string>
     <string name="desc_5">Machu Picchu is an ancient Inca site located in the Andes Mountains of Peru. It is located on a mountain ridge at an altitude of 7,970 feet above sea level, and is surrounded by dense jungle. The site is believed to have been built in the mid-1400s, and served as a royal retreat for the Inca emperor Pachacuti. It was later abandoned, and remained hidden from the outside world until it was rediscovered in 1911 by the American historian Hiram Bingham.\n\n
-
 Machu Picchu is a UNESCO World Heritage site and is considered one of the most important archaeological sites in South America. It is a popular tourist destination, and is visited by thousands of people every year. The site is known for its well-preserved stone buildings, which were built using traditional Inca techniques. It is also known for its spectacular views of the surrounding landscape, which includes the Vilcanota River, the Andes Mountains, and the surrounding jungle.\n\n
-
-Machu Picchu is a unique and fascinating place, and is a must-see destination for anyone interested in history, archaeology, or nature. It offers a glimpse into the rich history and culture of the Inca civilization, and is a testament to the ingenuity and skill of the ancient people who built it.
-
-
-
-</string>
+Machu Picchu is a unique and fascinating place, and is a must-see destination for anyone interested in history, archaeology, or nature. It offers a glimpse into the rich history and culture of the Inca civilization, and is a testament to the ingenuity and skill of the ancient people who built it.</string>
     <string name="desc_6">Chichen Itza is an ancient Maya city located in the Yucatan Peninsula of Mexico. It was one of the largest and most important cities of the Maya civilization, and is known for its impressive architecture and well-preserved ruins. The city was founded in the 5th century AD and reached its peak of prosperity in the 9th and 10th centuries. It was abandoned in the 13th century, and was rediscovered by the Western world in the 19th century.\n\n
-
 Chichen Itza is a UNESCO World Heritage site and is considered one of the most important archaeological sites in the Americas. It is a popular tourist destination, and is visited by millions of people every year. The site is known for its many impressive structures, including the Temple of Kukulkan, a pyramid that was dedicated to the Maya feathered serpent deity. It is also known for its ball court, where the ancient Maya played a ball game that was a combination of soccer and basketball.\n\n
-
 Chichen Itza is a fascinating place that offers a glimpse into the rich history and culture of the Maya civilization. It is a must-see destination for anyone interested in history, archaeology, or culture, and is a testament to the ingenuity and skill of the ancient people who built it.</string>
-    <string name="desc_7">Petra is an ancient city located in modern-day Jordan. It was founded in the 4th century BC by the Nabataeans, an Arab people who made their home in the desert. The city is known for its impressive architecture, which was carved into the sandstone cliffs of the surrounding mountains. It is also known for its complex system of water channels, which allowed the city to thrive in a desert environment.\n
-
-Petra is a UNESCO World Heritage site and is considered one of the most important cultural and historical sites in the Middle East. It is a popular tourist destination, and is visited by thousands of people every year. The site is known for its many impressive structures, including the Treasury, a large temple that was carved into the cliff face. It is also known for its theater, which was built in the 1st century AD and could seat up to 3,000 people.\n
-
+    <string name="desc_7">Petra is an ancient city located in modern-day Jordan. It was founded in the 4th century BC by the Nabataeans, an Arab people who made their home in the desert. The city is known for its impressive architecture, which was carved into the sandstone cliffs of the surrounding mountains. It is also known for its complex system of water channels, which allowed the city to thrive in a desert environment.\n\n
+Petra is a UNESCO World Heritage site and is considered one of the most important cultural and historical sites in the Middle East. It is a popular tourist destination, and is visited by thousands of people every year. The site is known for its many impressive structures, including the Treasury, a large temple that was carved into the cliff face. It is also known for its theater, which was built in the 1st century AD and could seat up to 3,000 people.\n\n
 Petra is a unique and fascinating place that offers a glimpse into the rich history and culture of the Nabataeans. It is a must-see destination for anyone interested in history, archaeology, or culture, and is a testament to the ingenuity and skill of the ancient people who built it.</string>
 </resources>
